[MSE][Mac] REGRESSION(r170336) - zero tolerance seeks are ignored. https://bugs.webkit.org/show_bug.cgi?id=134310

Reviewed by Brent Fulgham.

Tests for zero tolerance seeks were inadvertantly reversed in r170336.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::seekInternal):

Canonical link: https://commits.webkit.org/152292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170443 268f45cc-cd09-0410-ab3c-d52691b4dbfc